# deploycraft

./: .gitignore  AGENT.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  publish.yml
deploycraft/: __init__.py  cli.py  config.py  os_detect.py  setup.py  shell.py  utils.py
deploycraft/deploy/: __init__.py  deployer.py  env_manager.py  health_check.py  rollback.py
deploycraft/monitor/: __init__.py  alerter.py  checker.py  scheduler.py
deploycraft/services/: __init__.py  git.py  nginx.py  node.py  pm2.py  postgres.py  redis.py  ssh.py  ssl.py  systemd.py  users.py
deploycraft/stacks/: __init__.py  base.py  django.py  fastapi.py  html.py  nextjs.py  react.py  react_vite.py
templates/monitor/: deploycraft-monitor.service.j2  deploycraft-monitor.timer.j2
templates/nginx/: reverse_proxy.conf.j2  static_site.conf.j2
templates/systemd/: celery_beat.service.j2  celery_worker.service.j2  gunicorn.service.j2  uvicorn.service.j2
tests/: __init__.py  test_config.py  test_os_detect.py  test_rollback.py  test_ssh_users.py  test_stacks.py  test_utils.py
