[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deploycraft"
version = "0.1.0"
description = "Interactive CLI tool for automated web application deployment, configuration, and monitoring on Linux servers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shamsul" },
]
keywords = ["deployment", "server", "automation", "cli", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
deploycraft = "deploycraft.cli:app"

[project.urls]
Homepage = "https://github.com/shamsul/deploycraft"
Repository = "https://github.com/shamsul/deploycraft"

[tool.hatch.build.targets.wheel]
packages = ["deploycraft"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
